; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ndrv.c_ndrv_to_ifnet_demux.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ndrv.c_ndrv_to_ifnet_demux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ndrv_demux_desc = type { i64, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.ifnet_demux_desc = type { i64, i32, i32 }

@DLIL_DESC_ETYPE2 = common dso_local global i64 0, align 8
@ENOTSUP = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ndrv_to_ifnet_demux(%struct.ndrv_demux_desc* %0, %struct.ifnet_demux_desc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ndrv_demux_desc*, align 8
  %5 = alloca %struct.ifnet_demux_desc*, align 8
  store %struct.ndrv_demux_desc* %0, %struct.ndrv_demux_desc** %4, align 8
  store %struct.ifnet_demux_desc* %1, %struct.ifnet_demux_desc** %5, align 8
  %6 = load %struct.ifnet_demux_desc*, %struct.ifnet_demux_desc** %5, align 8
  %7 = call i32 @bzero(%struct.ifnet_demux_desc* %6, i32 16)
  %8 = load %struct.ndrv_demux_desc*, %struct.ndrv_demux_desc** %4, align 8
  %9 = getelementptr inbounds %struct.ndrv_demux_desc, %struct.ndrv_demux_desc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @DLIL_DESC_ETYPE2, align 8
  %12 = icmp slt i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @ENOTSUP, align 4
  store i32 %14, i32* %3, align 4
  br label %39

15:                                               ; preds = %2
  %16 = load %struct.ndrv_demux_desc*, %struct.ndrv_demux_desc** %4, align 8
  %17 = getelementptr inbounds %struct.ndrv_demux_desc, %struct.ndrv_demux_desc* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = icmp sgt i32 %18, 28
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @EINVAL, align 4
  store i32 %21, i32* %3, align 4
  br label %39

22:                                               ; preds = %15
  %23 = load %struct.ndrv_demux_desc*, %struct.ndrv_demux_desc** %4, align 8
  %24 = getelementptr inbounds %struct.ndrv_demux_desc, %struct.ndrv_demux_desc* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.ifnet_demux_desc*, %struct.ifnet_demux_desc** %5, align 8
  %27 = getelementptr inbounds %struct.ifnet_demux_desc, %struct.ifnet_demux_desc* %26, i32 0, i32 0
  store i64 %25, i64* %27, align 8
  %28 = load %struct.ndrv_demux_desc*, %struct.ndrv_demux_desc** %4, align 8
  %29 = getelementptr inbounds %struct.ndrv_demux_desc, %struct.ndrv_demux_desc* %28, i32 0, i32 2
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.ifnet_demux_desc*, %struct.ifnet_demux_desc** %5, align 8
  %33 = getelementptr inbounds %struct.ifnet_demux_desc, %struct.ifnet_demux_desc* %32, i32 0, i32 2
  store i32 %31, i32* %33, align 4
  %34 = load %struct.ndrv_demux_desc*, %struct.ndrv_demux_desc** %4, align 8
  %35 = getelementptr inbounds %struct.ndrv_demux_desc, %struct.ndrv_demux_desc* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.ifnet_demux_desc*, %struct.ifnet_demux_desc** %5, align 8
  %38 = getelementptr inbounds %struct.ifnet_demux_desc, %struct.ifnet_demux_desc* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 8
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %22, %20, %13
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @bzero(%struct.ifnet_demux_desc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
